// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lerna init initializes empty directory: lerna.json 1`] = `
Object {
  packages: Array [
    packages/*,
  ],
  version: 0.0.0,
}
`;

exports[`lerna init initializes empty directory: package.json 1`] = `
Object {
  devDependencies: Object {
    lerna: "^__TEST_VERSION__",
  },
}
`;

exports[`lerna init initializes empty directory: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info Initializing Git repository
lerna info Creating package.json
lerna info Creating lerna.json
lerna info Creating packages directory
lerna success Initialized Lerna files
`;

exports[`lerna init removes VERSION file: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info Creating package.json
lerna info Creating lerna.json
lerna info Creating packages directory
lerna info Removing old VERSION file
lerna success Initialized Lerna files
`;

exports[`lerna init updates existing metadata: lerna.json 1`] = `
Object {
  commands: Object {
    bootstrap: Object {
      hoist: true,
    },
    init: Object {
      exact: true,
    },
  },
  packages: Array [
    packages/*,
  ],
  version: 1.0.0,
}
`;

exports[`lerna init updates existing metadata: package.json 1`] = `
Object {
  devDependencies: Object {
    lerna: "__TEST_VERSION__",
  },
  name: updates,
}
`;

exports[`lerna init updates existing metadata: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info Updating package.json
lerna info Updating lerna.json
lerna info Creating packages directory
lerna success Initialized Lerna files
`;
